# ros_aiva_camera

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: DepthsensePublisher.cfg
include/libdepthsense/: ds.h  ds.hpp
launch/: depthsense_publisher.launch
script/: uvc_rules.sh
src/: depthsense_publisher.cpp  depthsense_publisher_nodelet.cpp
