<?xml version="1.0"?>
<package>
	<name>depthsense_publisher</name>
	<version>1.1.6</version>

	<description>
		The depthsense_publisher package contains a node to publish multi video stream.
			- ir video stream
			- depth video stream
			- pcl stream
	</description>

	<maintainer email="haizhou.hu@aivatech.com">haizhou.hu</maintainer>
	<author>haizhou.hu</author>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>camera_info_manager</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>nodelet</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>camera_info_manager</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>nodelet</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>sensor_msgs</run_depend>

	<test_depend>rostest</test_depend>
	<test_depend>rostopic</test_depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml"/>
	</export>
</package>
